--- a/cv/cv_en2021.md
+++ b/cv/cv_en2021.md
@@ -1,10 +1,11 @@
-::: {.center}
-**Truong-Vinh Hoang**\
-:::
-
-::: {.center}
+<header>
 Curriculum Vitae\
+**Truong-Vinh Hoang**\
+============
+</header>
+<main>
 
+# Contact
   -------------------------------------------------- ----------------------------- --
   **Truong-Vinh Hoang**                                                                                                                                                 
   Email: hoang\@uq-rwth.aachen.de                                                  
@@ -12,14 +13,13 @@ Curriculum Vitae\
   -------------------------------------------------- ----------------------------- --
 :::
 
-$~$\
-**Former and current Positions**
+# **Former and current Positions**
 
 ------------------------------------------------------------------------
 
 -  5.2021 - present: **Postdoctoral
 researcher**\
-[Chair of Mathematics for Uncertainty Quantification]{.nodecor}
+Chair of Mathematics for Uncertainty Quantification,
 (MATHUQ), Department of Mathematics, RWTH Aachen University, url:
 <https://www.uq.rwth-aachen.de/go/id/eibnp/?lidx=1>
 
@@ -31,12 +31,12 @@ Braunschweig, Germany, url: <https://www.tu-braunschweig.de/wire>
 
 - 09.2013 - 09.2017: **Research engineer -
 Doctoral candidate**\
-[Department of Aerospace and Mechanical Engineering, Faculty of Applied
-Sciences, University of Liège, Belgium]{.nodecor}, url:
+Department of Aerospace and Mechanical Engineering, Faculty of Applied
+Sciences, University of Liège, Belgium{.nodecor}, url:
 <http://www.ltas-cm3.ulg.ac.be/staff.htm>
 
 - 08.2010 - 08.2011: **Research assistant**\
 University of Technology, Vietnam National University HCMC, Vietnam,
 url: <https://vnuhcm.edu.vn/>
 
-
+</main>
