--- a/cv/cv_en2021.md
+++ b/cv/cv_en2021.md
@@ -1,17 +1,17 @@
 <header>
-Curriculum Vitae\
-**Truong-Vinh Hoang**\
+Curriculum Vitae
+
+Truong-Vinh Hoang
 ============
 </header>
 <main>
 
-# Contact
+## Contact
   -------------------------------------------------- ----------------------------- --
   **Truong-Vinh Hoang**                                                                                                                                                 
   Email: hoang\@uq-rwth.aachen.de                                                  
   Tel: +49-170-843-7228                                                            
   -------------------------------------------------- ----------------------------- --
-:::
 
 # **Former and current Positions**
 
