--- a/cv/cv_en2021.md
+++ b/cv/cv_en2021.md
@@ -1,19 +1,13 @@
-<header>
-Curriculum Vitae
 
-Truong-Vinh Hoang
-============
-</header>
-<main>
-
-## Contact
+ #Truong-Vinh Hoang Curriculum Vitae 
+### Contact
   -------------------------------------------------- ----------------------------- --
   **Truong-Vinh Hoang**                                                                                                                                                 
   Email: hoang\@uq-rwth.aachen.de                                                  
   Tel: +49-170-843-7228                                                            
   -------------------------------------------------- ----------------------------- --
 
-# **Former and current Positions**
+## **Former and current Positions**
 
 ------------------------------------------------------------------------
 
@@ -39,4 +33,4 @@ Sciences, University of Liège, Belgium{.nodecor}, url:
 University of Technology, Vietnam National University HCMC, Vietnam,
 url: <https://vnuhcm.edu.vn/>
 
-</main>
+
