--- a/cv/cv_en2021.md
+++ b/cv/cv_en2021.md
@@ -1,16 +1,11 @@
 
- # Truong-Vinh Hoang Curriculum Vitae 
+ # Curriculum Vitae 
 ### Contact
-  -------------------------------------------------- ----------------------------- --
-  **Truong-Vinh Hoang**                                                                                                                                                 
-  Email: hoang\@uq-rwth.aachen.de                                                  
-  Tel: +49-170-843-7228                                                            
-  -------------------------------------------------- ----------------------------- --
+ **Truong-Vinh Hoang**                                                                                                                                                 
+ Email: hoang\@uq-rwth.aachen.de                                                  
+ Tel: +49-170-843-7228                                                            
 
 ## **Former and current Positions**
-
-------------------------------------------------------------------------
-
 -  5.2021 - present: **Postdoctoral
 researcher**\
 Chair of Mathematics for Uncertainty Quantification,
