--- a/cv/cv_en2021.md
+++ b/cv/cv_en2021.md
@@ -2,7 +2,7 @@
  # Curriculum Vitae 
 ### Contact
  **Truong-Vinh Hoang**                                                                                                                                                 
- Email: hoang\@uq-rwth.aachen.de                                                  
+ Email: hoang@uq-rwth.aachen.de                                                  
  Tel: +49-170-843-7228                                                            
 
 ## **Former and current Positions**
@@ -14,14 +14,14 @@ Chair of Mathematics for Uncertainty Quantification,
 
 - 10.2017 - 3.2020: **Postdoctoral
 researcher**\
-[Institute of Scientific Computing]{.nodecor} (WiRe), Faculty of
+Institute of Scientific Computing (WiRe), Faculty of
 Information, Carl-Friedrich-Gauß-Fakultät, Technische Universität
 Braunschweig, Germany, url: <https://www.tu-braunschweig.de/wire>
 
 - 09.2013 - 09.2017: **Research engineer -
 Doctoral candidate**\
 Department of Aerospace and Mechanical Engineering, Faculty of Applied
-Sciences, University of Liège, Belgium{.nodecor}, url:
+Sciences, University of Liège, Belgium, url:
 <http://www.ltas-cm3.ulg.ac.be/staff.htm>
 
 - 08.2010 - 08.2011: **Research assistant**\
