--- a/cv/cv_en2021.md
+++ b/cv/cv_en2021.md
@@ -9,23 +9,20 @@
 -  5.2021 - present: **Postdoctoral
 researcher**\
 Chair of Mathematics for Uncertainty Quantification,
-(MATHUQ), Department of Mathematics, RWTH Aachen University, url:
-<https://www.uq.rwth-aachen.de/go/id/eibnp/?lidx=1>
+(MATHUQ), Department of Mathematics, RWTH Aachen University, [link](https://www.uq.rwth-aachen.de/go/id/eibnp/?lidx=1)
 
 - 10.2017 - 3.2020: **Postdoctoral
 researcher**\
 Institute of Scientific Computing (WiRe), Faculty of
 Information, Carl-Friedrich-Gauß-Fakultät, Technische Universität
-Braunschweig, Germany, url: <https://www.tu-braunschweig.de/wire>
+Braunschweig, Germany, [link](https://www.tu-braunschweig.de/wire).
 
 - 09.2013 - 09.2017: **Research engineer -
 Doctoral candidate**\
 Department of Aerospace and Mechanical Engineering, Faculty of Applied
-Sciences, University of Liège, Belgium, url:
-<http://www.ltas-cm3.ulg.ac.be/staff.htm>
+Sciences, University of Liège, Belgium, [link](http://www.ltas-cm3.ulg.ac.be)
 
 - 08.2010 - 08.2011: **Research assistant**\
-University of Technology, Vietnam National University HCMC, Vietnam,
-url: <https://vnuhcm.edu.vn/>
+University of Technology, Vietnam National University HCMC, Vietnam, [link](https://vnuhcm.edu.vn/)
 
 
