--- a/cv/cv_en2021.md
+++ b/cv/cv_en2021.md
@@ -1,9 +1,7 @@
-
- # Curriculum Vitae 
+# Curriculum Vitae
 ### Contact
- **Truong-Vinh Hoang**                                                                                                                                                 
- Email: hoang@uq-rwth.aachen.de                                                  
- Tel: +49-170-843-7228                                                            
+**Truong-Vinh Hoang**                                                                                                                                                Email: hoang@uq-rwth.aachen.de                                                  
+Tel: +49-170-843-7228                                                            
 
 ## **Former and current Positions**
 -  5.2021 - present: **Postdoctoral
